Wire ProviderFactory + real userId into upload flow (replaces mock-only path)